charts/values/flagger-grafana-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flagger-grafana
  namespace: istio-system
spec:
  hosts:
  - "flagger.iowa.weavedx.com"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: flagger-grafana
    timeout: 30s
