charts/values/steerer-grafana-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: steerer-grafana
  namespace: istio-system
spec:
  hosts:
  - "steerer.iowa.weavedx.com"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: steerer-grafana
    timeout: 30s
